Add new projects

--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -19,21 +19,24 @@
 .skills li {
   list-style-type: disc;
   padding: 10px;
+  font-size: 20px;
 }
 .projects {
   display: flex;
   flex-direction: column;
   text-align: center;
-  min-height: 80vh;
-  margin-bottom: 30px;
+  min-height: 100vh;
+  margin: 0 0 30px 0;
 }
 .gallery {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .gallery img {
-  width: 200px;
-  height: 150px;
+  width: 230px;
+  height: 180px;
   padding: 10px;
   margin: 10px;
   border: solid 1px black;
@@ -50,7 +53,10 @@
   padding-inline-start: 0px;
 }
 .contact-list li svg {
-  margin-right: 10px;
+  margin: 0 10px 0 0;
+}
+.contact-list li a{
+  padding: 0;
 }
 .contact-list li {
   padding: 10px 0;
